# 2T2F

./: db.sqlite3  pyproject.toml
baskets/: admin.py  models.py
baskets/migrations/: 0001_initial.py  0002_initial.py
chatrooms/: admin.py  models.py
chatrooms/migrations/: 0001_initial.py  0002_initial.py
common/: models.py
config/: settings.py
dibs/: admin.py  models.py
dibs/migrations/: 0001_initial.py  0002_initial.py
photos/: admin.py  models.py
photos/migrations/: 0001_initial.py
product_categories/: admin.py  apps.py  models.py
product_categories/migrations/: 0001_initial.py
product_reviews/: admin.py  models.py
product_reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_productreview_image.py  0005_alter_productreview_image.py
products/: admin.py  models.py
products/migrations/: 0001_initial.py  0002_initial.py
user_reviews/: admin.py  apps.py  models.py
user_reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userreview_image.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_avatar.py
