[tool.poetry]
name = "outsourcingwebsite"
version = "0.1.0"
description = ""
authors = ["JHS0320 <gkstu123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
